// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavMenuItem should render 1`] = `
<SideNavMenuItem
  className="custom-classname"
  href="#"
  isActive={false}
>
  <li
    className="bx--side-nav__menu-item custom-classname"
  >
    <Link
      className="bx--side-nav__link"
      element="a"
      href="#"
    >
      <a
        className="bx--side-nav__link"
        href="#"
      >
        <SideNavLinkText>
          <span
            className="bx--side-nav__link-text"
          >
            link
          </span>
        </SideNavLinkText>
      </a>
    </Link>
  </li>
</SideNavMenuItem>
`;

exports[`SideNavMenuItem should render active styles with \`isActive\` or \`aria-current="page"\` 1`] = `
<SideNavMenuItem
  className="custom-classname"
  href="#"
  isActive={true}
>
  <li
    className="bx--side-nav__menu-item custom-classname"
  >
    <Link
      className="bx--side-nav__link bx--side-nav__link--current"
      element="a"
      href="#"
    >
      <a
        className="bx--side-nav__link bx--side-nav__link--current"
        href="#"
      >
        <SideNavLinkText>
          <span
            className="bx--side-nav__link-text"
          >
            link
          </span>
        </SideNavLinkText>
      </a>
    </Link>
  </li>
</SideNavMenuItem>
`;

exports[`SideNavMenuItem should render active styles with \`isActive\` or \`aria-current="page"\` 2`] = `
<SideNavMenuItem
  aria-current="page"
  className="custom-classname"
  href="#"
  isActive={false}
>
  <li
    className="bx--side-nav__menu-item custom-classname"
  >
    <Link
      aria-current="page"
      className="bx--side-nav__link"
      element="a"
      href="#"
    >
      <a
        aria-current="page"
        className="bx--side-nav__link"
        href="#"
      >
        <SideNavLinkText>
          <span
            className="bx--side-nav__link-text"
          >
            link
          </span>
        </SideNavLinkText>
      </a>
    </Link>
  </li>
</SideNavMenuItem>
`;
